- spacing fix for heroes in small desktop

--- a/wp-content/themes/nationswell/css/small-desktop.css
+++ b/wp-content/themes/nationswell/css/small-desktop.css
@@ -3997,7 +3997,7 @@ hr {
 /* hero */
 /* line 2, ../scss/partials/small-desktop/_components.scss */
 .hero {
-  margin-bottom: 5rem;
+  margin-bottom: 8.2rem;
   background-color: #061822;
 }
 
